# wanderland

./: .gitignore  CLAUDE.md  LICENSE  README.md  example.ipynb  example.py  package-lock.json  package.json  pyproject.toml  rl_playground.py
.nblink/: environment.yml
js/: board.js  easing.js  hud.js  index.js  objects.js  palette.js  scene.js  theme.js  viewer.js
js/characters/: character.js  index.js  mossball.js  rover.js
src/wanderland/: __init__.py  actions.py  commands.py  generate.py  puzzles.py  render.py  solve.py  world.py
src/wanderland/static/: index.css  index.js
test/: browser_test.mjs  expr_entry.js  fixture.json  fixture_collect2.json  fixture_hover.json  fixture_lava.json  fixture_nogoal.json  fixture_teeter.json  harness.html  lr_init.json  lr_solve.json  screenshot.mjs  shot.html  shot_characters.mjs  shot_expr.html  shot_expr.mjs  shot_gem.mjs  shot_lava.mjs  shot_lr.mjs  shot_notebook.mjs  shot_return.mjs  shot_teeter.mjs  shot_widget.mjs  test_sim.py
