[project]
name = "wanderland"
version = "0.1.0"
description = "An interactive low-poly 3D coding playground (anywidget) for marimo: write Python commands and watch Mo the Mossball act them out."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Konstantin Taletskiy" }]
keywords = ["anywidget", "marimo", "education", "learn-to-code", "three.js", "widget"]
dependencies = [
    "anywidget>=0.9.13",
    "traitlets>=5.9",
]

[project.optional-dependencies]
dev = [
    "marimo>=0.9",
    "watchfiles>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wanderland"]

[tool.hatch.build.targets.wheel.force-include]
"src/wanderland/static" = "wanderland/static"

[tool.hatch.build]
artifacts = ["src/wanderland/static/*"]

[tool.uv]
# Local dev convenience; not required for end users.

[tool.marimo.package_management]
# Use uv for this project's notebooks (overrides any global marimo config).
manager = "uv"

[tool.marimo.runtime]
# Auto-reload the editable package when its source changes, so notebook cells
# pick up edits in the SAME tab without a server restart.
auto_reload = "autorun"
